--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -17,6 +17,7 @@
 \pagestyle{fancy}
 \lhead{}
 \chead{\textsf{Team 891}}
+\rhead{}
 \cfoot{\thepage{} of \pageref*{LastPage}}
 
 \setlength{\columnsep}{1.5cm}
@@ -58,7 +59,7 @@ The intensity of a spherical wave is inversely proportional to the square of the
  	\mathbf{F}_R(r) = \dfrac{2SI_0r_0^2}{c}\dfrac{1}{r^2} \mathbf{\hat{e}}_r \label{eq:radiation force}
 \end{equation}
 
-\section{Equations of motion for a solar sail}
+\subsection{Equations of motion for a solar sail}
 We have established that a solar sail that receives radiation in a direction orthogonal to itself experiences an inverse square central force. The other force acting on the sail is gravitational attraction due to the Sun ---we will consider the gravitational pull from other planets to be negligible when compared to that of the Sun---, which is also an inverse square force law. Namely:
 \begin{equation}
  	\mathbf{F}_G(r) = -\dfrac{G M_S m}{r^2} \mathbf{\hat{e}}_r \label{eq:gravitational force}
