--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -67,11 +67,15 @@ We have established that a solar sail that receives radiation in a direction ort
 where \( m \) is the mass of the solar sail ---including the mass of the payload--- and \( M_S \) is the mass of the Sun.
 
 Thus, we are now in a position to write the equations of motion for the solar sail
+\begin{align}
+	a_{r} &= \dot{v}_r - \dfrac{v_{\theta}^2}{r} = \dfrac{F_R - F_G}{m} \refstepcounter{equation} \tag{\theequation{}a} \\
+	a_{\theta} &= \dot{v}_{\theta} + \dfrac{v_r v_{\theta}}{r} = 0 \tag{\theequation{}b}
+\end{align}
+It is common to introduce a number of parameters to better encapsulate the nature of a solar sail. The characteristic acceleration of a solar sail, \( a_0 \), is defined to be the acceleration the sail experiences due to radiation pressure at a distance equal to 1 astronomical unit (AU) from the Sun:
 \begin{equation}
-  \begin{aligned}
-    
-  \end{aligned}
+  a_0 = \dfrac{2SI_0}{mc}
 \end{equation}
+where we are sticking to the notation introduced in the previous section.
 
 \end{document}
 
