--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -97,7 +97,9 @@ With this in mind we can then rewrite \autoref{eq:equations of motion perpendicu
   \dot{v}_r - \dfrac{v_{\theta}^2}{r} &= (a_R - a_G) \left(\dfrac{r_0}{r}\right)^2 \\
 	\dot{v}_{\theta} + \dfrac{v_r v_{\theta}}{r} &= 0
 \end{align}
-As we have already mentioned, this shows that a solar sail receiving radiation orthogonal to itself moves as if 
+As we have already mentioned, this shows that the motion of a solar sail receiving radiation orthogonal to itself is governed by an inverse square law. In particular, the sail will move as if it were orbiting a star with a mass less than the Sun.
+
+This, however, is only true if the sail is orthogonal to the incoming radiation. Indeed, if we allow for the sail to be at an arbitrary orientation, then its tangential acceleration is no longer zero. For this, we introduce the angle \( \alpha \), which is the angle between the vector normal to the sail, \( \hat{\mathbf{n}} \), and the radial direction.  
 
 \end{document}
 
