--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -119,5 +119,10 @@ Finally, we can rewrite the equations of motion for a solar sail in this more ge
 As a consistency check,  we note that if \( \alpha = 0 \), that is, the sail is orthogonal to the radiation, we recover \autoref{eq:equations of motion characteristic accelerations}. However, the equations we have just obtained are \emph{not} the equations for a particle experiencing central force motion.   
 
 
+\section{First results}
+\subsection{Payload time opt}
+
+\subsection{The logarithmic spiral trajectory}
+Literature suggests (TSUU) 
 \end{document}
 
