--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -9,20 +9,10 @@
 \usepackage{fancyhdr,lastpage}
 \renewcommand{\footrulewidth}{0.4pt}
 \usepackage[bf,sf]{titlesec}
+\usepackage{siunitx}
 \usepackage{titling}
 \usepackage{abstract}
 \usepackage{amsmath}
-<<<<<<< HEAD
-\usepackage{amsthm}
-\usepackage{amssymb,units}
-\usepackage{graphicx}
-\usepackage{dcolumn}
-\usepackage{float, fancyhdr}
-
-=======
-\usepackage{siunitx}
->>>>>>> 5ee3f750a83bb53684119e47f3bbd21fe8fbb308
-
 \pagestyle{fancy}
 \lhead{\textsf{Solar Sailing from Earth to Mars}}
 \rhead{\textsf{Team 891}}
@@ -67,6 +57,7 @@ Throughout the article, several assumptions have been made, both as interpretati
 
 
 \section{The physics of solar sailing}
+We will follow \cite{tsu} and \cite{mcinnes} for most of this section.
 \subsection{Radiation pressure}
 It is well-known that electromagnetic wave carries an energy density. The fundamental idea behind solar sails is to use this energy as a means of propulsion in a way very much similar to how traditional sails take advantage of the kinetic energy of the wind. Given that the diameter of any reasonable solar sail will be much smaller than its distance to the Sun, one may approximate the solar radiation that arrives at the sail in the form of sinusoidal planar waves of frequency \( \omega \).
 
@@ -130,47 +121,7 @@ As a consistency check,  we note that if \( \alpha = 0 \), that is, the sail is 
 \section{First Results}
 \subsection{Payload Analysis}
 
-
+\bibliographystyle{ieeetr}
+\bibliography{UphysicscNotes}
 
 \end{document}
-
-<<<<<<< HEAD
-	
-	%Título do Relatório
-	
-	\author{Team number: 891\\ Problem A\\Aquí va el títol}
-	
-	\begin{abstract}
-		
-		\begin{center}
-			
-			\rule{15cm}{1pt} \\
-			
-		\end{center}
-		
-		Ací va l'abstract que queda bonic blablablablablablablablablablablabla
-		\begin{center}
-			
-			\rule{15cm}{1pt} \\
-			
-		\end{center}
-		
-	\end{abstract}
-	
-	\maketitle
-	\onecolumngrid\newpage\twocolumngrid
-	\section{Introducció}
-	+ blablablablablalbalbalblalbalblala
-	
-
-	\section{References}
-	[1] J. COSTA QUINTANA. En principi és a dir. $5{\textsuperscript{\underline{a}}}$ edição. São Paulo - SP: Edgard Blucher, 2014. 
-	
-	
-	
-	
-	
-	
-\end{document}
-=======
->>>>>>> 5ee3f750a83bb53684119e47f3bbd21fe8fbb308
