--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -123,7 +123,7 @@ As a consistency check,  we note that if \( \alpha = 0 \), that is, the sail is 
 
 
 \subsection{The logarithmic spiral trajectory}
-Literature suggests \liter{tsu} one can neglect the  $\dot{v}_r$ term in equation !!! as a first approach. The simplified equation reads
+Literature suggests \cite{tsu} one can neglect the  $\dot{v}_r$ term in equation !!! as a first approach. The simplified equation reads
 \begin{equation}
 - \dfrac{v_{\theta}^2}{r} = (a_R \cos^3{\alpha} - a_G) \left(\dfrac{r_0}{r}\right)^2
 \end{equation} 
