--- a/UphysicscNotes.bib
+++ b/UphysicscNotes.bib
@@ -11,7 +11,7 @@
 
 @book{mcinnes,
 	author = "Colin R. Mcinnes",
-	title = "Solar Sailing: Techonology, Dynamics and Mission Applications",
+	title = "Solar Sailing: Technology, Dynamics and Mission Applications",
 	year = "2004",
 	publisher = "Springer-Verlag"
 }
