--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -48,7 +48,7 @@ Test test test
 
 \section{Introduction}
 \subsection{Restatement of the problem}
-Several interpretations of the problem have been made during the study of the problem. Understanding firstly the physical foundations around solar sailing was essential in order to perform an accurate analysis. This included giving reasons for thrust due to light pressure
+ A more detailed interpretation of the problem has been made to achieve an optimized flight plan. Understanding firstly the physical foundations around solar sailing was essential in order to perform an accurate analysis.  reasoning the total force exerted on the sail and being able to compute results regarding trajectories. Since some initial conditions are already given it has been necessary to verify whether these were the best options to accomplish the overall goal of the study or not.
 
 \subsection{Main assumptions}
 Throughout the article, several assumptions have been made, both as interpretations of the problem and in order to facilitate the model. However, all assumptions are supported by literature, and all the approximations were found to be reasonable. We present the approximations and interpretations made.
