--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -49,6 +49,8 @@ Test test test
 \section{Introduction}
 \subsection{Restatement of the problem}
  A more detailed interpretation of the problem has been made to achieve an optimized flight plan. Understanding firstly the physical foundations around solar sailing was essential in order to perform an accurate analysis.  reasoning the total force exerted on the sail and being able to compute results regarding trajectories. Since some initial conditions are already given it has been necessary to verify whether these were the best options to accomplish the overall goal of the study or not.
+ 
+ Moreover the aim of the survey was not only to calculate the path followed by the craft but also to determine its velocity so that a safe landing can be guaranteed. However, as trying to consider the attraction of Mars does not always give accurate results, this is not an easy task, though an estimate of craft arrival to Mars is presented at the end.
 
 \subsection{Main assumptions}
 Throughout the article, several assumptions have been made, both as interpretations of the problem and in order to facilitate the model. However, all assumptions are supported by literature, and all the approximations were found to be reasonable. We present the approximations and interpretations made.
