--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -160,9 +160,10 @@ Having solved both velocities, one finds the trajectory taken is a logarithmic s
 Figure ?? shows a first approximation of the trajectory taken by the space craft with the mentioned suppositions and values.
 
 \begin{figure}
+	\centering
 	\includegraphics[scale=0.5]{espiral.png}
 	\label{espiral}
-	\caption[font=smallest]{First approximation of the sail trajectory, in blue. The Sun is in the middle and the dashed lines represent the orbits of the Earth and Mars. Axis in AU.}
+	\caption{\small First approximation of the sail trajectory, in blue. The Sun is in the middle and the dashed lines represent the orbits of the Earth and Mars. Axis in AU.}
 \end{figure}
 
 
